# Smartenergyai

./: README.md  deploy.py  pyproject.toml  requirements.txt
templates/: index.html
